{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 135,
  "lineage": "d4ec57f5-d45d-b6f0-e948-5dc1dd226493",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:321510646715:vpc/vpc-0dd9798a0ba5d98ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0bcb6e448dd79db47",
            "default_route_table_id": "rtb-0a098e182a5213b7b",
            "default_security_group_id": "sg-039890a53d3e151f3",
            "dhcp_options_id": "dopt-040ed452a21dcb014",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dd9798a0ba5d98ab",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a098e182a5213b7b",
            "owner_id": "321510646715"
          }
        }
      ]
    },
    {
      "module": "module.aws_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:loadbalancer/app/dev-alb/f65627545c4f66b2",
            "arn_suffix": "app/dev-alb/f65627545c4f66b2",
            "dns_name": "dev-alb-689436886.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:loadbalancer/app/dev-alb/f65627545c4f66b2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-alb",
            "security_groups": [
              "sg-081b003c178e19e3f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-039c94881d2fb7504"
              },
              {
                "subnet_id": "subnet-043cab6d3425dae71"
              }
            ],
            "subnets": [
              "subnet-039c94881d2fb7504",
              "subnet-043cab6d3425dae71"
            ],
            "tags": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-0dd9798a0ba5d98ab",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:listener/app/dev-alb/f65627545c4f66b2/8225a226c0df5241",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-dev-one-lb/c9cabf5d359c70a3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:listener/app/dev-alb/f65627545c4f66b2/8225a226c0df5241",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:loadbalancer/app/dev-alb/f65627545c4f66b2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_alb.aws_lb.alb",
            "module.aws_ec2.aws_lb_target_group.green",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff4c8fb495a5a50d",
            "arn": "arn:aws:ec2:eu-west-2:321510646715:instance/i-0bb393d169c44da13",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb393d169c44da13",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "communication-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-064d72ef0bdab8ec4",
            "private_dns": "ip-172-31-60-38.eu-west-2.compute.internal",
            "private_ip": "172.31.60.38",
            "public_dns": "ec2-35-177-150-90.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.150.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0954a41057a4232f0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_http",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-039c94881d2fb7504",
            "tags": {
              "Name": "dev-one-blue-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a409961575ec6535",
              "sg-0ebb2531d570f6dbe"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_http_to_instance",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff4c8fb495a5a50d",
            "arn": "arn:aws:ec2:eu-west-2:321510646715:instance/i-049b92be07f958327",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049b92be07f958327",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "communication-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03b212854a7e6cd8c",
            "private_dns": "ip-172-31-61-31.eu-west-2.compute.internal",
            "private_ip": "172.31.61.31",
            "public_dns": "ec2-3-8-155-204.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.155.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ac1a1bf8b512dc12",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_http",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043cab6d3425dae71",
            "tags": {
              "Name": "dev-one-blue-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a409961575ec6535",
              "sg-0ebb2531d570f6dbe"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_http_to_instance",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff4c8fb495a5a50d",
            "arn": "arn:aws:ec2:eu-west-2:321510646715:instance/i-0a520b02a660481ab",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a520b02a660481ab",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "communication-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-087bb413060f0d03e",
            "private_dns": "ip-172-31-60-73.eu-west-2.compute.internal",
            "private_ip": "172.31.60.73",
            "public_dns": "ec2-3-9-12-39.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.9.12.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09c1666c7bd65dbc6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_http",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-039c94881d2fb7504",
            "tags": {
              "Name": "dev-one-green-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a409961575ec6535",
              "sg-0ebb2531d570f6dbe"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_http_to_instance",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff4c8fb495a5a50d",
            "arn": "arn:aws:ec2:eu-west-2:321510646715:instance/i-0be480b2f6ded1bd7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be480b2f6ded1bd7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "communication-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a605412bcfd9e914",
            "private_dns": "ip-172-31-61-44.eu-west-2.compute.internal",
            "private_ip": "172.31.61.44",
            "public_dns": "ec2-3-8-184-189.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.184.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0524fbf11ed4585be",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_http",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043cab6d3425dae71",
            "tags": {
              "Name": "dev-one-green-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a409961575ec6535",
              "sg-0ebb2531d570f6dbe"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_http_to_instance",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/blue-dev-one-lb/3595d79aff1229e1",
            "arn_suffix": "targetgroup/blue-dev-one-lb/3595d79aff1229e1",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/blue-dev-one-lb/3595d79aff1229e1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "blue-dev-one-lb",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dd9798a0ba5d98ab"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-dev-one-lb/c9cabf5d359c70a3",
            "arn_suffix": "targetgroup/green-dev-one-lb/c9cabf5d359c70a3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-dev-one-lb/c9cabf5d359c70a3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "green-dev-one-lb",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dd9798a0ba5d98ab"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/blue-dev-one-lb/3595d79aff1229e1-20210211203103258300000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/blue-dev-one-lb/3595d79aff1229e1",
            "target_id": "i-0bb393d169c44da13"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_instance.blue",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_ec2.aws_lb_target_group.blue",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_http_to_instance",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/blue-dev-one-lb/3595d79aff1229e1-20210211203107850200000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/blue-dev-one-lb/3595d79aff1229e1",
            "target_id": "i-049b92be07f958327"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_instance.blue",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_ec2.aws_lb_target_group.blue",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_http_to_instance",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-dev-one-lb/c9cabf5d359c70a3-20210211203103325400000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-dev-one-lb/c9cabf5d359c70a3",
            "target_id": "i-0a520b02a660481ab"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_instance.green",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_ec2.aws_lb_target_group.green",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_http_to_instance",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-dev-one-lb/c9cabf5d359c70a3-20210211203103291200000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-dev-one-lb/c9cabf5d359c70a3",
            "target_id": "i-0be480b2f6ded1bd7"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_instance.green",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_ec2.aws_lb_target_group.green",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_http_to_instance",
            "module.aws_security_groups.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:321510646715:security-group/sg-081b003c178e19e3f",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0ebb2531d570f6dbe"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081b003c178e19e3f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "321510646715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-alb-sc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd9798a0ba5d98ab"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_security_groups.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.aws_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_to_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:321510646715:security-group/sg-0a409961575ec6535",
            "description": "Allow http from ALB traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a409961575ec6535",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-081b003c178e19e3f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "321510646715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-allow_http-sc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd9798a0ba5d98ab"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_security_groups.aws_security_group.alb",
            "module.aws_security_groups.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.aws_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:321510646715:security-group/sg-0ebb2531d570f6dbe",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ebb2531d570f6dbe",
            "ingress": [
              {
                "cidr_blocks": [
                  "85.206.68.114/32",
                  "172.31.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "321510646715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-allow_ssh-sc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd9798a0ba5d98ab"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_green_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:321510646715:subnet/subnet-039c94881d2fb7504",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.31.60.0/24",
            "id": "subnet-039c94881d2fb7504",
            "map_public_ip_on_launch": false,
            "owner_id": "321510646715",
            "tags": {
              "Name": "dev-60-subnet"
            },
            "vpc_id": "vpc-0dd9798a0ba5d98ab"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:321510646715:subnet/subnet-043cab6d3425dae71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.31.61.0/24",
            "id": "subnet-043cab6d3425dae71",
            "map_public_ip_on_launch": false,
            "owner_id": "321510646715",
            "tags": {
              "Name": "dev-61-subnet"
            },
            "vpc_id": "vpc-0dd9798a0ba5d98ab"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}